examples/invalid/test03.alice
x was a number.
x became 10.
perhaps (x > 10) so
  .
because Alice was unsure which
